# Silkjam

./: .env.sample  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  docker-compose.yml  environment.yml  project_environment  pyproject.toml  requirements.txt
app/: Caddyfile  entrypoint.sh  nginx.conf  supervisord.conf
app/backend/: main.py
app/backend/apps/api/: main.py
app/backend/core/: backend.py  backup_manager.py  baseacm.py  client.py  orchestrator.py  ports.py  protocol.py  proxy.py  status_checker.py
app/backend/models/: __init__.py  config.py  mojang_api.py  proxy_listing.py  server_listing.py  server_properties.py
app/backend/supervisor/: __init__.py  base_unit.py  supervisor.py  timer.py
app/backend/utils/: backup_strategies.py  logger_adapters.py
app/frontend/: index.html
app/orchestrator/: main.py  mc_client.py  mc_orchestrator.py  mc_protocol_utils.py  mc_proxy.py  mc_server.py  server_webapp.py  utils.py
app/orchestrator/core/: backend.py  baseacm.py  client.py  mcproc.py  orchestrator.py  protocol.py  proxy.py  supervisor.py
app/orchestrator/models/: config.py  serverproperties.py
app/orchestrator/utils/: backups.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
src/: main.py
src/api/: servers.py
src/orchestrator/: mc.py  mcproxy.py  mcserver.py  protocol_utils.py  server_webapp.py
stubs/jsondiff/: __init__.pyi
stubs/mctools/: __init__.pyi
stubs/nbtlib/: __init__.pyi
test/: test_backups.py  test_supervisor.py
tools/: monitor_status.py  udp_echo_client.py  udp_echo_server.py
(+1 files in other folders)
