[project]
name = "Silkjam"
version = "0.1.0"
requires-python = ">=3.14"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psutil",
    "mctools",
    "nbtlib",
    "jsondiff",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "ipython",
    "rich-argparse",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
mypy_path = ["stubs"]
